# CCHard-benchmark

./: .env.example  .gitignore  .zenodo.json  CHECKSUMS.sha256  CITATION.cff  CODE_AVAILABILITY_STATEMENT.md  DATA_AVAILABILITY_STATEMENT.md  LICENSE  LICENSE_CODE  MANIFEST.md  README.md  REFERENCES.md  REPRODUCIBILITY.md  data_dictionary.md  pyproject.toml  sample_items.csv  sample_items.json  statistics.json  task_prompts.json
configs/: models.example.json
examples/demo_outputs/: predictions.jsonl  run_manifest.json  scores.jsonl
examples/demo_outputs/summaries/: difficulty_gaps.csv  summary_by_difficulty.csv  summary_by_dimension.csv  summary_by_subtask.csv  summary_overall.csv
src/cchard_eval/: __init__.py  cli.py  client.py  data.py  inference.py  plotting.py  prompts.py  scoring.py  statistics.py
tests/: test_cli_demo.py  test_client.py  test_data.py  test_inference.py  test_plotting.py  test_prompts.py  test_scoring.py  test_statistics.py
